--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Byte-compiled / optimized / DLL files
+ Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *.pyo
@@ -234,6 +234,8 @@ FPCalzado.db
 .DS_Store
 Thumbs.db
 
-# Password
+# Private
 secrets/
 src/encrypt.py
+.env
+src/config.py
